<resources>
    <string name="app_name">Demo My Login App</string>
    <string name="welcome">Welcome to Android!</string>
    <string name="text">Large Text</string>
    <string name="first">Button 1</string>
    <string name="second">Button 2</string>
    <string name="user">Name:</string>
    <string name="pass">Password:</string>
    <string name="enter">login</string>
    <string name="nah">cancel</string>
    <string name="fn">Full Name</string>
    <string name="sch">School</string>
    <string name="ID">Student ID</string>
    <string name="num">Phone</string>
</resources>
