<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".registration">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="Registration Form"
        android:textStyle="bold"
        android:layout_marginLeft="4dp"
        android:fontFamily="sans-serif-condensed-medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome to Adventure Learning Club! \n"
        android:layout_marginLeft="4dp"/>

    <android.support.v4.widget.Space
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fn"
            android:textStyle="bold"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=" First Name"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
            android:background="@drawable/edittext_border"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=" Last Name"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
            android:background="@drawable/edittext_border"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="4dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female" />

        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ID"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="4dp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/edittext_border"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sch"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="4dp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/edittext_border"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="E-mail"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="4dp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/edittext_border"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num"
            android:textStyle="bold"
            android:layout_marginLeft="4dp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/edittext_border"
            android:layout_marginRight="4dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="\n"/>
    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:background="@android:color/black"
        android:textColor="@android:color/white"

        android:layout_gravity="center"/>

</LinearLayout>